[package]
name = "brown_noise_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biquad = "0.4.2"
clap = { version = "4.2.7", features = ["derive", "env"] }
hound = "3.5.0"
rand = "0.8.5"
wav = "1.0.0"
